--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vistas.DomicilioActivoActivity"></activity>
+        <activity android:name=".vistas.NuevoDomicilioActivity"></activity>
+        <activity android:name=".vistas.DomicilioActivoActivity" />
         <activity android:name=".vistas.TomarDomicilioActivity" />
         <activity android:name=".vistas.DomiciliosActivosActivity" />
         <activity android:name=".vistas.DomiciliosDisponiblesActivity" />
