--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vistas.NuevoClienteActivity"></activity>
+        <activity android:name=".vistas.GetClienteActivity"></activity>
+        <activity android:name=".vistas.NuevoClienteActivity" />
         <activity
             android:name=".vistas.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
