--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,12 @@ android {
         }
     }
 }
+repositories {
+    mavenCentral()
+}
 
 dependencies {
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
@@ -37,5 +41,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
+    implementation 'org.osmdroid:osmdroid-android:6.1.8'
+    
 }
+
