--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,9 +20,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".vistas.GetClienteActivity"></activity>
+        <activity android:name=".vistas.MapLocation"></activity>
+        <activity android:name=".vistas.GetClienteActivity" />
         <activity android:name=".vistas.NuevoClienteActivity" />
-
         <activity android:name=".vistas.NuevoDomicilioActivity" />
         <activity android:name=".vistas.DomicilioActivoActivity" />
         <activity android:name=".vistas.TomarDomicilioActivity" />
