--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.osmdroid:osmdroid-android:6.1.8'
     implementation("com.squareup.okhttp3:okhttp:4.7.2")
     implementation "androidx.work:work-runtime-ktx:2.4.0"
+    implementation 'com.google.android.gms:play-services-location:17.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
