--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,11 +7,11 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "com.example.aquitoyapp"
+        applicationId "com.soportec.aquitoyapp"
         minSdkVersion 22
         targetSdkVersion 30
         versionCode 1
-        versionName "1.0"
+        versionName '0.9'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
