--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'org.osmdroid:osmdroid-android:6.1.8'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation("com.squareup.okhttp3:okhttp:4.7.2")
     implementation "androidx.work:work-runtime-ktx:2.4.0"
     implementation 'com.google.android.gms:play-services-location:17.1.0'
