--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.soportec.aquitoyapp">
+    package="com.soportec.aquitoyapp" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
@@ -17,19 +16,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ico_app"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity
-            android:name=".vistas.NavegacionAppActivity"
-            android:label="@string/title_activity_navegacion_app"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".vistas.NavegacionActivity"
-            android:label="@string/title_activity_navegacion"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity
-            android:name=".vistas.NavgActivity"
-            android:label="@string/title_activity_navg"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+        android:theme="@style/AppTheme" >
+
+
         <activity android:name=".vistas.LogginActivity" />
         <activity android:name=".vistas.NuevaNotaDom" />
         <activity android:name=".vistas.GetClienteActivity" />
@@ -38,11 +27,10 @@
         <activity android:name=".vistas.DomicilioActivoActivity" />
         <activity android:name=".vistas.TomarDomicilioActivity" />
         <activity android:name=".vistas.DomiciliosActivosActivity" />
-        <activity android:name=".vistas.DomiciliosDisponiblesActivity" />
-        <activity android:name=".vistas.menuPrincipal" />
+        <activity android:name=".vistas.NavegacionActivity"/>
         <activity
             android:name=".MainActivity"
-            android:noHistory="true">
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -54,7 +42,7 @@
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.soportec.aquitoyapp"
             android:exported="false"
-            android:grantUriPermissions="true">
+            android:grantUriPermissions="true" >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
